--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2024.8.30
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -20,6 +21,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 nodeenv==1.9.1
+packaging==24.2
 priority==2.0.0
 prisma==0.15.0
 pydantic==2.9.2
